--- a/build.xml
+++ b/build.xml
@@ -1,17 +1,15 @@
 <!--+
     |
-    |           +===========================+
-    |           |    Exhibit Build System   |
-    |           +===========================+
+    |           +==============================+
+    |           |    SimileAjax Build System   |
+    |           +==============================+
     |
     | This is just for bundling and minifying javascript and CSS files.
     |
     +-->
 
-<project default="bundle" basedir="." name="Exhibit">
+<project default="bundle" basedir="." name="SimileAjax">
 
-<!-- === Initialize ================================================= -->
-    
   <target name="tasks">
     <taskdef name="jsmin"
         classname="edu.mit.simile.jsminTask.JSMinTask"
@@ -19,12 +17,15 @@
   </target>
       
   <target name="bundle" depends="tasks">
-    <jsmin output="src/webapp/api/bundle.js">
+    <jsmin output="src/webapp/api/simile-ajax-bundle.js">
+        <fileset dir="src/webapp/api/scripts">
+            <include name="platform.js" />
+        </fileset>
         <fileset dir="src/webapp/api/scripts">
             <include name="**/*.js" />
-            <!-- <exclude name="signal.js" />
-            <exclude name="platform.js" /> -->
+            <exclude name="signal.js" />
+            <exclude name="platform.js" />
         </fileset>
-      </jsmin>
+    </jsmin>
   </target>
 </project>
