--- a/build.xml
+++ b/build.xml
@@ -26,11 +26,13 @@
   <target name="bundle" depends="tasks">
     <jsmin output="src/webapp/api/simile-ajax-bundle.js">
         <fileset dir="src/webapp/api/scripts">
+            <include name="jquery*.js" />
             <include name="platform.js" />
         </fileset>
         <fileset dir="src/webapp/api/scripts">
             <include name="**/*.js" />
             <exclude name="signal.js" />
+            <exclude name="jquery*.js" />
             <exclude name="platform.js" />
         </fileset>
     </jsmin>
