--- a/build.xml
+++ b/build.xml
@@ -34,6 +34,11 @@
   <target name="bundle-all" depends="bundle,bundle-require">
   </target>
 
+  <target name="publish-local" depends="bundle-all">
+    <copy file="${build.dir}/simile-ajax-bundle.js" todir="${api.dir}"/>
+    <copy file="${build.dir}/simile-ajax-require-bundle.js" todir="${api.dir}"/>
+  </target>
+
   <target name="docs">
     <java jar="${jsdoc.dir}/app/js.jar" fork="true" dir="${jsdoc.dir}">
         <arg value="app/run.js"/>
@@ -46,5 +51,7 @@
 
   <target name="clean">
     <delete dir="${build.dir}"/>
+    <delete file="${api.dir}/simile-ajax-bundle.js"/>
+    <delete file="${api.dir}/simile-ajax-require-bundle.js"/>
   </target>
 </project>
