make publish task default, make including / using require false by default to mimic old behavior; move project specific settings into a hash, correct onerror / onload property setting

--- a/build.xml
+++ b/build.xml
@@ -8,7 +8,7 @@
     |
     +-->
 
-<project default="bundle-all" basedir="." name="SimileAjax">
+<project default="publish-local" basedir="." name="SimileAjax">
 
   <property name="webapp.dir"  value="src/webapp"/>
   <property name="api.dir"     value="${webapp.dir}/api"/>
