moving main to simile-ajax to reduce conflicts when using as a separate require path; eliminating simile-ajax-api since it just forwards to a bundle, building it as a bundle; renaming require bundle output to simile-ajax-bundle.js

--- a/build.xml
+++ b/build.xml
@@ -41,8 +41,8 @@
   </target>
 
   <target name="publish-local" depends="bundle-all">
+    <copy file="${build.dir}/simile-ajax-api.js" todir="${api.dir}"/>
     <copy file="${build.dir}/simile-ajax-bundle.js" todir="${api.dir}"/>
-    <copy file="${build.dir}/simile-ajax-require-bundle.js" todir="${api.dir}"/>
     <copy file="${build.dir}/simile-ajax-bundle.css" todir="${api.dir}/styles"/>
   </target>
 
@@ -58,8 +58,8 @@
 
   <target name="clean">
     <delete dir="${build.dir}"/>
+    <delete file="${api.dir}/simile-ajax-api.js"/>
     <delete file="${api.dir}/simile-ajax-bundle.js"/>
-    <delete file="${api.dir}/simile-ajax-require-bundle.js"/>
     <delete file="${api.dir}/styles/simile-ajax-bundle.css"/>
   </target>
 </project>
