--- a/build.xml
+++ b/build.xml
@@ -37,8 +37,14 @@
     </exec>
   </target>
   
-  <target name="bundle-all" depends="bundle,bundle-require,bundle-css">
+  <target name="bundle-debug">
+    <exec dir="." executable="node">
+      <arg line="${rjs.dir}/r.js -o ${rjs.dir}/build.js optimize=none out=build/simile-ajax-api-debug.js"/>
+    </exec>
+    <copy file="${build.dir}/simile-ajax-api-debug.js" todir="${api.dir}"/>
   </target>
+
+  <target name="bundle-all" depends="bundle,bundle-require,bundle-css" />
 
   <target name="publish-local" depends="bundle-all">
     <copy file="${build.dir}/simile-ajax-api.js" todir="${api.dir}"/>
